tests/snapshots/integration_test__tests__should_not_be_able_to_pipe_to_open.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexec `command` => open(\"test\");\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: File must be in write or append mode to be used as a destination
    call_stack: []
exit_code: 103
