tests/snapshots/integration_test__tests__should_not_support_returning_from_root_block.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nreturn 123;\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Return must be used in a function block
    call_stack: []
exit_code: 103
