tests/snapshots/integration_test__tests__should_strip_trailing_carriage_return_from_input.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nvar test_input = read();\nout(test_input.fmt());\n\"#,\n    \"my_fancy_input\\r\\nextra_stuff_here\", |_| {})"
---
stdout: "\"my_fancy_input\"\n"
stderr: ""
error: ~
exit_code: 0
