tests/snapshots/integration_test__tests__should_use_defined_function_over_builtin.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        func glob(value: string) {\n            out(\"defined glob called!\");\n        }\n        glob(\"\");\n        \"#,\n    \"\", |_| {})"
---
stdout: "defined glob called!\n"
stderr: ""
error: ~
exit_code: 0
